<resources>
    <string name="app_name">MusicStreamer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">MusicStreamer</string>

    <string name="action_settings">Settings</string>
    <string name="invalid_json_parse">JSON parsing error</string>
    <string name="search_text_view">Insert a song name and start search</string>
    <string name="search">Search</string>
    <string name="search_hint">Insert song information</string>
    <string name="empty_serach_edit">This field cannot be empty</string>
    <string name="song_list_item_length">Length:</string>
    <string name="song_list_item_bitrate">Bitrate:</string>
    <string name="song_list_item_host">Host:</string>
    <string name="song_list_item_size">Size:</string>
    <string name="song_connection_failed">Unable to load this song</string>
    <string name="search_no_result">No results found</string>
    <string name="action_open_favourites">Favourites</string>
    <string name="warning">Warning</string>
    <string name="confirm_message">Are you sure?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete_favourite_dialog_message">Confirm to delete this favourite?</string>
    <string name="favourite_song_deleted">Song deleted</string>
    <string name="undo">Undo</string>

    <string name="label_pause">Pause</string>
    <string name="label_play">Play</string>
    <string name="player_no_song">Select a song to play</string>
    <string name="player_buffering">Buffering…</string>


    <string name="action_hide">Hide Panel</string>
    <string name="action_show">Show Panel</string>
    <string name="action_anchor_enable">Enable Anchor Point</string>
    <string name="action_anchor_disable">Disable Anchor Point</string>
    <string name="hello"><![CDATA[<b>The Awesome Sliding Up Panel</b><br/> Brought to you by<br/><a href="http://umanoapp.com">http://umanoapp.com</a>]]></string>
    <string name="follow"><![CDATA[Follow us<br/>on <a href="http://twitter.com/umanoapp">Twitter</a>]]></string>
    <string name="player_title">Title</string>
    <string name="player_artist">Artist</string>
    <string name="play_pause_button_description">Play/Pause</string>
    <string name="search_from_notification">Click here to start search</string>
</resources>
