<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="10dp"
        android:foreground="?selectableItemBackground"
        android:stateListAnimator="@animator/lift_on_touch"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/songItemTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="songItemTitle"
                android:textSize="@dimen/list_item_title_text"/>
            <!--TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song_list_item_length"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"/-->
            <TextView
                android:id="@+id/songItemLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3:20"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />
            <TextView
                android:id="@+id/songItemArtist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="songItemArtist"
                android:layout_below="@id/songItemTitle"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/songItemArtist"
                android:gravity="start">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/song_list_item_bitrate"/>
                <TextView
                    android:id="@+id/songItemBitrate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="320"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/song_list_item_host"/>
                <TextView
                    android:id="@+id/songItemHost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pleer.net"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/song_list_item_size"/>

                <TextView
                    android:id="@+id/songItemSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="N/A" />
            </LinearLayout>

            <ImageView
                android:id="@+id/songItemStar"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="star"
                android:src="@drawable/ic_star_transparent_24dp"
                android:scaleType="fitXY"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
